--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,17 +5,17 @@ driver:
 provisioner:
   name: chef_zero
 
-# Uncomment the following verifier to leverage Inspec instead of Busser (the
-# default verifier)
-# verifier:
-#   name: inspec
-
 platforms:
-  - name: ubuntu-14.04
-  - name: centos-7.1
+  - name: debian8_local
+    driver:
+        box: debian8_local
 
 suites:
-  - name: default
+  - name: master
     run_list:
-      - recipe[chef-platform_jenkins::default]
+      - recipe[platform_jenkins::master]
     attributes:
+    driver:
+      network:
+        - [ 'forwarded_port', { guest: 9080, host: 4290 } ]
+        - [ 'private_network', { ip: '192.168.42.200' } ]
