stabilised the master run, adding slave init

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -19,3 +19,10 @@ suites:
       network:
         - [ 'forwarded_port', { guest: 9080, host: 4290 } ]
         - [ 'private_network', { ip: '192.168.42.200' } ]
+  - name: slave
+    run_list:
+      - recipe[platform_jenkins::slave]
+    attributes:
+    driver:
+      network:
+        - [ 'private_network', { ip: '192.168.42.300' } ]
